app-test/testdata/typesystem/neg/algebraic-type-duplicate-field/check/adt.check
testdata/typesystem/neg/algebraic-type-duplicate-field/src/adt.cal:2:22: error: a is already declared in this scope.
    type T : (int a, bool a) end // error
                     ^^^^^^